@@ -21,8 +21,16 @@ import java.io.InputStreamReader;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.NetworkInterface;
+import java.net.SocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Enumeration;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * @author Changski Tie Zheng Zhang 张铁铮, 魏泽北, 杜旺财, 杜富贵
@@ -31,12 +39,12 @@ public class GeoIpUtil {
 
     public static final String CHECKIP_URL_AWS = "http://checkip.amazonaws.com";
 
-    public static String getExternalIp() throws IOException {
+    public static String getExternalIp() throws IOException, URISyntaxException {
         return getExternalIp(CHECKIP_URL_AWS);
     }
 
-    public static String getExternalIp(String url) throws IOException {
-        URL whatismyip = new URL(url);
+    public static String getExternalIp(String url) throws IOException, URISyntaxException {
+        URL whatismyip = new URI(url).toURL();
         try (BufferedReader in = new BufferedReader(new InputStreamReader(whatismyip.openStream()));) {
             return in.readLine();
         }
@@ -107,16 +115,120 @@ public class GeoIpUtil {
 
     public static void showAddress(String host, int port) {
         InetSocketAddress address = new InetSocketAddress(host, port);
-        System.out.println("\n" + host);
-        showAddress(address);
+        String info = showAddress(address);
+        System.out.println(info);
     }
 
-    public static void showAddress(InetSocketAddress address) {
-        System.out.println("\t getHostName: " + address.getHostName());
-        System.out.println("\t getHostString: " + address.getHostString());
-        System.out.println("\t getCanonicalHostName: " + address.getAddress().getCanonicalHostName());
-        System.out.println("\t getHostAddress: " + address.getAddress().getHostAddress());
-        System.out.println("\t getHostName: " + address.getAddress().getHostName());
-        System.out.println("\n");
+    public static String showAddress(InetSocketAddress address) {
+        StringBuilder sb = new StringBuilder();
+        sb.append("\n isUnresolved=").append(address.isUnresolved());
+        sb.append("\n port=").append(address.getPort());
+        sb.append("\n toString=").append(address.toString());
+        sb.append("\n getHostString=").append(address.getHostString());
+        sb.append("\n getHostName=").append(address.getHostName());
+        sb.append("\n getAddress=").append(address.getAddress());
+        sb.append("\n getHostAddress=").append(address.getAddress().getHostAddress());
+        sb.append("\n getHostName=").append(address.getAddress().getHostName());
+        sb.append("\n getCanonicalHostName=").append(address.getAddress().getCanonicalHostName());
+        return sb.toString();
+    }
+
+    public static enum CallerAddressFilterOption {
+        String, HostString, HostName, AddressStirng, HostAddress, AddrHostName, CanonicalHostName
+    }
+
+    /**
+     * Simple filter for caller address
+     *
+     * @param callerAddr
+     * @param whiteList
+     * @param blackList
+     * @param option
+     * @return null if OK, otherwise return the reason
+     */
+    public static String callerAddressFilter(SocketAddress callerAddr, Set<String> whiteList, Set<String> blackList, String regexPrefix, CallerAddressFilterOption option) {
+        if (callerAddr == null) {
+            return "caller address is null";
+        }
+        String host;
+        if (callerAddr instanceof InetSocketAddress) {
+            InetSocketAddress address = (InetSocketAddress) callerAddr;
+            if (address.isUnresolved()) {
+                return "caller address (" + address + ") is unresolved";
+            }
+            switch (option) {
+                case String -> host = address.toString();
+                case HostString -> host = address.getHostString();
+                case HostName -> host = address.getHostName();
+                case AddressStirng -> host = address.getAddress().toString();
+                case HostAddress -> host = address.getAddress().getHostAddress();
+                case AddrHostName -> host = address.getAddress().getHostName();
+                case CanonicalHostName -> host = address.getAddress().getCanonicalHostName();
+                default -> host = address.getHostName();
+            }
+        } else {
+            host = callerAddr.toString();
+        }
+        return callerAddressFilter(host, whiteList, blackList, regexPrefix);
+    }
+
+    /**
+     * Simple filter for caller address
+     *
+     * @param host
+     * @param whiteList
+     * @param blackList
+     * @return null if OK, otherwise return the reason
+     */
+    public static String callerAddressFilter(String host, Set<String> whiteList, Set<String> blackList, String regexPrefix) {
+        if (whiteList != null && !whiteList.isEmpty()) {
+            if (!whiteList.contains(host)) {
+                // check regex
+                if (regexPrefix != null) {
+                    for (String whiteRegex : whiteList) {
+                        if (whiteRegex.startsWith(regexPrefix)) {
+                            if (matches(host, whiteRegex, regexPrefix)) {
+                                return null;
+                            }
+                        }
+                    }
+                }
+                return "caller address (" + host + ") is not in white list";
+            }
+        }
+        if (blackList != null && !blackList.isEmpty()) {
+            if (blackList.contains(host)) {
+                return "caller address (" + host + ") is in black list";
+            } else if (regexPrefix != null) {
+                for (String blackRegex : blackList) {// check regex
+                    if (blackRegex.startsWith(regexPrefix)) {
+                        if (matches(host, blackRegex, regexPrefix)) {
+                            return "caller address (" + host + ") matches black list: " + blackRegex;
+                        }
+                    }
+                }
+            }
+        }
+        return null;
+    }
+
+    public static Map<String, Pattern> REGEX_CACHE = new ConcurrentHashMap<>();
+
+    public static boolean matches(String input, String regex, String regexPrefix) {
+        if (regex == null || regex.isEmpty()) {
+            return true;
+        }
+        Pattern p = REGEX_CACHE.get(regex);
+        if (p == null) {
+            if (regexPrefix != null && regex.startsWith(regexPrefix)) {
+                p = Pattern.compile(regex.substring(regexPrefix.length()));
+            } else {
+                p = Pattern.compile(regex);
+            }
+            REGEX_CACHE.put(regex, p);
+        }
+        Matcher m = p.matcher(input);
+        //return m.matches();  This is a Java's misnamed method, it tries and matches ALL the input.
+        return m.find();// If you want to see if the regex matches an input text, use the .find() method of the matcher
     }
 }
